--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,3 @@
-
 {
   "name": "indigerd/php-consul-sdk",
   "description": "PHP Consul SDK.",
@@ -15,9 +14,17 @@
     "guzzlehttp/guzzle": ">=4,<6",
     "psr/log": "~1.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "@stable"
+  },
   "autoload": {
     "psr-4": {
       "indigerd\\consul\\": "src/consul"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "indigerd\\consultests\\": "tests/consul"
     }
   }
 }
