Temporary switched to guzzle 5

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": ">=4,<6",
     "psr/log": "~1.0"
   },
   "require-dev": {
